--- a/Paginas WEB/AboutUs.html
+++ b/Paginas WEB/AboutUs.html
@@ -87,29 +87,25 @@ ul, li {
         background-color:#afb2b3 ;
     }
     
-    .contactos{
-
+    .contactos {
+        display: flex;
         justify-content: center;
         align-items: center;
-       position: absolute;
-       top:780px;
-       left: 900px;
+        position: absolute;
+        top: 780px;
+        left: 900px;
         float: left;
         max-height: 200px;
         max-width: 500px;
-}
-
-table{
-       justify-content: center;
-        align-items: center;
-       position: absolute;
-       top:1670px;
-       left: 547px;
-        float: left;
+    }
+    table {
+        position: absolute;
+        top: 60%; 
+        left: 50%; 
+        transform: translate(-50%, -50%);
         max-height: 200px;
         max-width: 500px;
-
-}
+    }
 
     </style>
 </head>
