--- a/Paginas WEB/InicioMotorShow.html
+++ b/Paginas WEB/InicioMotorShow.html
@@ -189,26 +189,28 @@ button.parpadea {
    border: 1px solid black;
   cursor: pointer;
 }
-.programador{
-    background-color: #e6ad10;
-    position: absolute;
- left:670px;
- top:130px;
- font-size: 28px;
-}
-.experiencias{
 
-    position: absolute;
- left:670px;
- top:180px;
- font-size: 16px;
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  text-align: center; 
 }
-.llamame{
-    background-color: #e6ad10;
-    position: absolute;
- left:670px;
- top:330px;
- font-size: 19px;
+
+.programador {
+  background-color: #e6ad10;
+  font-size: 28px;
+}
+
+.experiencias {
+  font-size: 16px;
+}
+
+.llamame {
+  background-color: #e6ad10;
+  font-size: 19px;
 }
  
 
