--- a/Paginas WEB/FormularioMotorShow.html
+++ b/Paginas WEB/FormularioMotorShow.html
@@ -73,6 +73,7 @@ h1, u {
     grid-column: 1 / 2;
     grid-row: 4/5;
     display: flex;
+    right:5%;
      transform: translate(-185%, -140%);
 
 }
