--- a/Paginas WEB/InicioMotorShow.html
+++ b/Paginas WEB/InicioMotorShow.html
@@ -488,7 +488,7 @@ h1 {
                             <img src="https://i.blogs.es/037337/mercedes-amg-c-63-kurbelgehaeuse-amg-4-0-liter-v8-biturbomotor-motorbaureihe-m177/450_1000.jpg" alt="tipo de coches" width="300px" height="200px"> 
                         </td>
                         <td>
-                            <p><font size= "4">Esta exposicion es idónea para loos amnates de los moteres y sus características, en esta charla presentamos todo sobre las últimas novedades del mundo del automotriz.</font></p>
+                            <p><font size= "4">Esta exposicion es idónea para los amantes de los moteres y sus características, en esta charla presentamos todo sobre las últimas novedades del mundo del automotriz.</font></p>
                         </td>
                     </tr>
                    
