--- a/Paginas WEB/Eventos.html
+++ b/Paginas WEB/Eventos.html
@@ -154,7 +154,7 @@ h1 {
 </div>
     <div class="presentacion">
     <p>
-        Somos una empresa especializada en las conferencias automovilisticas de coches de alta gama, y tambien en las subastas de coches exclusivos. Nuestra de manera de trabajar es creeando diferentes eventos al rededor del mundo para exponer cohes exclusivos y subastarlos.
+        Somos una empresa especializada en las conferencias automovilisticas de coches de alta gama, y tambien en las subastas de coches exclusivos. Nuestra manera de trabajar es creando diferentes eventos al rededor del mundo para exponer coches exclusivos y subastarlos.
     </p>
 </div>
     <div class="div-1">
@@ -184,7 +184,7 @@ h1 {
                     </td>
                     <td>
                         <img src="MSElegante.png">
-                        <p>Esta exposicion es idónea para loos amnates de los moteres y sus características, en esta charla presentamos todo sobre las últimas novedades del mundo del automotriz, en nuestras exposiciones suelen a ver motores  de  4 cilindros: 381 CV hasta 16 cilindros: 1.500 CV. Por otro lado, hacemos las pruebas de los motores en directo para que los presentes sean testigos de la calidad y capacidad de potencia de los mismos. </p>
+                        <p>Esta exposicion es idónea para los amates de los moteres y sus características, en esta charla presentamos todo sobre las últimas novedades del mundo del automotriz, en nuestras exposiciones suelen a ver motores  de  4 cilindros: 381 CV hasta 16 cilindros: 1.500 CV. Por otro lado, hacemos las pruebas de los motores en directo para que los presentes sean testigos de la calidad y capacidad de potencia de los mismos. </p>
                           <a href="FormularioMotorShow.HTML" target="blank">Ingresar al Formulario</a>
                     </td>
                 </tr>
@@ -200,7 +200,7 @@ h1 {
                         </td>
                         <td>
                             <img src="MSElegante.png">
-                            <p>>Una de nuestras aficiones son los coches clásicos y en esta exposicion hacemos que los socios/socias mas veteranos sientan la nostalgia, y que las nuevas generaciones presenten y sean testigos de historia y cultura en el mundo auotomotriz. Ademas en esta exposicion nos consideramos permisivos; pagando una cuota puedes montarte en el coche y disfurtarlo por dentro. La única restringión es entrar sin alimentos ni bebidas para la mayor seguridad y restauracion del vehículo.</p>
+                            <p>Una de nuestras aficiones son los coches clásicos y en esta exposicion hacemos que los socios/socias mas veteranos sientan la nostalgia, y que las nuevas generaciones presenten y sean testigos de historia y cultura en el mundo auotomotriz. Ademas en esta exposicion nos consideramos permisivos; pagando una cuota puedes montarte en el coche y disfurtarlo por dentro. La única restringión es entrar sin alimentos ni bebidas para la mayor seguridad y restauracion del vehículo.</p>
                               <a href="FormularioMotorShow.HTML" target="blank">Ingresar al Formulario</a>
                         </td>
                     </tr>
@@ -217,7 +217,7 @@ h1 {
                         </td>
                         <td>
                             <img src="MSElegante.png">
-                            <p>Nos encanta lo moderno tambíen, aunque amemos lo clásico, lo revolucionario tambíen nos encanta y somos de los primeros en mostar nuevos lanzamientos premium y de lujo de nuestras mejores marcas. Uno de los lanzamientos mas esperados por ejemplo: Roll-Royce Spectre, Ferrari no se queda atras con su Ferrari PuroSangue, Bugatti no se queda atras tampoco con su Bugatti Bolide que promete ser una joya automotriz </p>
+                            <p>Nos encanta lo moderno tambíen, aunque amemos lo clásico, lo revolucionario tambíen nos encanta y somos de los primeros en mostar nuevos lanzamientos premium y de lujo de nuestras mejores marcas. Uno de los lanzamientos mas esperados por ejemplo: Roll-Royce Spectre, Ferrari no se queda atras con su Ferrari PuroSangue, Bugatti tampoco con su Bugatti Bolide que promete ser una joya automotriz. </p>
                               <a href="FormularioMotorShow.HTML" target="blank">Ingresar al Formulario</a>
                         </td>
                     </tr>
@@ -232,7 +232,7 @@ h1 {
 
     <div class="presentacion">
     <p>
-       He aquí nuestro apartado para las subastas, rellenando el formulario de la anterior página puedes partcipar tanto como espectador o también con la posibilidad de subastar tu vehículo pagando una tasa.Tenemos que añadir que la entrada a los/las menores esta totalmete restringida
+       He aquí nuestro apartado para las subastas, rellenando el formulario de la anterior página puedes partcipar como espectador o también con la posibilidad de subastar tu vehículo pagando una tasa.Tenemos que añadir que la entrada a los/las menores esta totalmete restringida
     </p>
 <div class="div-1">
 
@@ -246,7 +246,7 @@ h1 {
           <td>
           <img src="MSElegante.png">
 
-            <p>  En este apartado solemos ser mucho más exclusivos a la hora de seleccionar los/las participantes del día ya que para ello hay que ser socio VIP y con un cápital más que alto. La subasta se realiza 1 vez cada 4 meses, ya que conseguir coches de tal magnitud no esta a la altura de cualquiera. Por último hay que mencionar que nuestras subastas duran aproximadamente 3 horas, y en estos eventos tomamos descansos y solemos dar aperitivos y bebidas para su disfrute en los descansos.
+            <p>  En este apartado solemos ser mucho más exclusivos a la hora de seleccionar los/las participantes del día ya que para ello hay que ser socio VIP y con un cápital alto. La subasta se realiza 1 vez cada 4 meses, ya que conseguir coches de tal magnitud no esta a la altura de cualquiera. Por último hay que mencionar que nuestras subastas duran aproximadamente 3 horas, y en estos eventos tomamos descansos y solemos dar aperitivos y bebidas para su disfrute en los descansos.
            </p>
 
           </td>
