--- a/Paginas WEB/FormularioMotorShow.html
+++ b/Paginas WEB/FormularioMotorShow.html
@@ -212,7 +212,7 @@ h2{
 
    <tr>
     <td>
-        <p>Como principal novedad, la octava generación del modelo se ofrecerá también con propulsión totalmente eléctrica (denominada i5), junto con motor diésel y de gasolina de hibridación suave (Mild-Hybrid), con batería de 48 V. A partir de noviembre, también con dos versiones híbridas enchufables.</p>
+        <p>Como principal novedad, la octava generación del modelo se ofrecerá también con propulsión totalmente eléctrica (denominada i5), (Mild-Hybrid), con batería de 48 V. A partir de noviembre, también con dos versiones híbridas enchufables.</p>
     </td>
  
   </tr>
