--- a/Paginas WEB Codigos HTML/Eventos.html
+++ b/Paginas WEB Codigos HTML/Eventos.html
@@ -167,7 +167,7 @@ h1 {
             </td>
             <td>
                 <img src="MSElegante.png">
-                <p>Nos encargamos de las exposiciones de coches de alta gama, y nuestras/os mejores y mas reconocidas son: Roll Royce, Ferrari, Bugatti, Lamborghini, Porsche. Nos encanta ofrecer el mejor espectaculo a nuestros socios/socias para que disfruten y se diviertan en nuestras exposiciones y subastas. Cualquier fanatico es bienvenido/a a nuestros eventos ya que nos encanta fomentar el amor que tenemos hacia los coches y transmitirlos a los demas, asi que los/las esperamos en el proximo evento. </p>
+                <p>Nos encargamos de las exposiciones de coches de alta gama, y nuestras/os mejores y mas reconocidas son: Roll Royce, Ferrari, Bugatti, Lamborghini, Porsche. Nos encanta ofrecer el mejor espectáculo a nuestros socios/socias para que disfruten y se diviertan en nuestras exposiciones y subastas. Cualquier fanático es bienvenido/a a nuestros eventos ya que nos encanta fomentar el amor que tenemos hacia los coches y transmitirlos a los demas, asi que los/las esperamos en el próximo evento. </p>
              <a href="FormularioMotorShow.HTML" target="blank">Ingresar al Formulario</a>
 
             </td>
@@ -184,7 +184,7 @@ h1 {
                     </td>
                     <td>
                         <img src="MSElegante.png">
-                        <p>Esta exposicion es idónea para los amates de los moteres y sus características, en esta charla presentamos todo sobre las últimas novedades del mundo del automotriz, en nuestras exposiciones suelen a ver motores  de  4 cilindros: 381 CV hasta 16 cilindros: 1.500 CV. Por otro lado, hacemos las pruebas de los motores en directo para que los presentes sean testigos de la calidad y capacidad de potencia de los mismos. </p>
+                        <p>Esta exposicion es idónea para los amantes de los motores y sus características, en esta charla presentamos todo sobre las últimas novedades del mundo automotriz, en nuestras exposiciones suelen a ver motores  de  4 cilindros: 381 CV hasta 16 cilindros: 1.500 CV. Por otro lado, hacemos las pruebas de los motores en directo para que los presentes sean testigos de la calidad y capacidad de potencia de los mismos. </p>
                           <a href="FormularioMotorShow.HTML" target="blank">Ingresar al Formulario</a>
                     </td>
                 </tr>
@@ -200,7 +200,7 @@ h1 {
                         </td>
                         <td>
                             <img src="MSElegante.png">
-                            <p>Una de nuestras aficiones son los coches clásicos y en esta exposicion hacemos que los socios/socias mas veteranos sientan la nostalgia, y que las nuevas generaciones presenten y sean testigos de historia y cultura en el mundo auotomotriz. Ademas en esta exposicion nos consideramos permisivos; pagando una cuota puedes montarte en el coche y disfurtarlo por dentro. La única restringión es entrar sin alimentos ni bebidas para la mayor seguridad y restauracion del vehículo.</p>
+                            <p>Una de nuestras aficiones son los coches clásicos y en esta exposición hacemos que los socios/socias mas veteranos sientan la nostalgia, y que las nuevas generaciones presenten y sean testigos de historia y cultura en el mundo automotriz. Ademas en esta exposicion nos consideramos permisivos; pagando una cuota puedes montarte en el coche y disfurtarlo por dentro. La única restringión es entrar sin alimentos ni bebidas para la mayor seguridad y restauracion del vehículo.</p>
                               <a href="FormularioMotorShow.HTML" target="blank">Ingresar al Formulario</a>
                         </td>
                     </tr>
@@ -232,7 +232,7 @@ h1 {
 
     <div class="presentacion">
     <p>
-       He aquí nuestro apartado para las subastas, rellenando el formulario de la anterior página puedes partcipar como espectador o también con la posibilidad de subastar tu vehículo pagando una tasa.Tenemos que añadir que la entrada a los/las menores esta totalmete restringida
+       He aquí nuestro apartado para las subastas, rellenando el formulario de la anterior página puedes partcipar como espectador o también con la posibilidad de subastar tu vehículo pagando una tasa.Tenemos que añadir que la entrada a los/las menores esta totalmete restringida.
     </p>
 <div class="div-1">
 
